# DesafioIA

./: .gitignore
backend/: pyproject.toml
backend/src/: main.py
backend/src/core/: settings.py
backend/src/db/: database.py
backend/src/db/models/: __init__.py  ata_model.py  atendimento_model.py  call_answering_model.py
backend/src/services/: attendants.py  process_atas.py  process_audios.py  processar_atas.py  processar_audios.py  procurar_atendentes.py
backend_express/: app.js  package-lock.json  package.json
backend_express/routes/: index.js  uploadRoute.js
backend_express/services/: dbService.js  openAiService.js  transcriptionService.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/home/button/: Button.jsx  ButtonStyles.ts
frontend/src/components/home/input_ata/: InputAta.jsx  InputAtaStyles.js
frontend/src/components/home/input_audio/: InputAudio.jsx  InputAudioStyles.js
frontend/src/containers/home/background_container/: BackgroundContainer.jsx  BackgroundContainerStyles.js
frontend/src/containers/home/main_container/: MainContainer.jsx  MainContainerStyles.js
frontend/src/containers/table/: ContainerTable.jsx  ContainerTableStyles.js
frontend/src/pages/: Home.jsx  HomeStyles.js
frontend/src/styles/: GlobalStyles.js
